--- a/inventory-service/src/main/resources/application-docker.properties
+++ b/inventory-service/src/main/resources/application-docker.properties
@@ -3,5 +3,9 @@ spring.datasource.url=jdbc:postgresql://postgres-inventory:5432/inventory-servic
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=inventory_user
 spring.datasource.password=inventory_password
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.generate-ddl=true
 eureka.client.serviceUrl.defaultZone=http://eureka:password@service-discovery-server:8761/eureka
 spring.zipkin.base-url=http://zipkin:9411
+eureka.instance.preferIpAddress=true
