--- a/product-service/src/main/resources/application-docker.properties
+++ b/product-service/src/main/resources/application-docker.properties
@@ -1,6 +1,8 @@
-spring.data.mongodb.host=mongo
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=product-service
+#spring.data.mongodb.host=mongo
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=product-service
 server.port=8080
+spring.data.mongodb.uri=mongodb://mongo:27017/product-service
 spring.zipkin.base-url=http://zipkin:9411
 eureka.client.serviceUrl.defaultZone=http://eureka:password@service-discovery-server:8761/eureka
+eureka.instance.preferIpAddress=true
