--- a/K8/infrastructure/postgres-order/postgres-order-deployment.yaml
+++ b/K8/infrastructure/postgres-order/postgres-order-deployment.yaml
@@ -29,7 +29,7 @@ spec:
               value: order_password
             - name: POSTGRES_USER
               value: order_user
-          image: postgres
+          image: postgres:16-bullseye
           name: postgres-order
           ports:
             - containerPort: 5431
