--- a/.github/workflows/deployApp.yml
+++ b/.github/workflows/deployApp.yml
@@ -49,7 +49,7 @@ jobs:
         run: eksctl version
       - name: Create cluster
         id: createCluster
-        run: eksctl create cluster --name online-shopping-cluster --region us-east-1
+        run: eksctl create cluster --name online-shopping-cluster-1 --region us-east-1
       - name: Deploy application
         id: deploy
         run: |
