--- a/K8/infrastructure/keycloak-mysql/keycloak-mysql-deployment.yaml
+++ b/K8/infrastructure/keycloak-mysql/keycloak-mysql-deployment.yaml
@@ -47,6 +47,7 @@ metadata:
     app: keycloak-mysql-claim0
   name: keycloak-mysql-claim0
 spec:
+  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
