--- a/K8/infrastructure/postgres-inventory/postgres-inventory-deployment.yaml
+++ b/K8/infrastructure/postgres-inventory/postgres-inventory-deployment.yaml
@@ -63,6 +63,7 @@ metadata:
     app: postgres-inventory-claim0
   name: postgres-inventory-claim0
 spec:
+  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
