--- a/K8/infrastructure/postgres-order/postgres-order-deployment.yaml
+++ b/K8/infrastructure/postgres-order/postgres-order-deployment.yaml
@@ -68,6 +68,7 @@ metadata:
     app: postgres-order-claim0
   name: postgres-order-claim0
 spec:
+  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
