--- a/.github/workflows/deployApp.yml
+++ b/.github/workflows/deployApp.yml
@@ -51,6 +51,9 @@ jobs:
         id: createCluster
         run: eksctl create cluster --name online-shopping-cluster-1 --region us-east-1
         continue-on-error: true
+      - name: Update K8 config
+        id: updateKubeConfig
+        run: aws eks update-kubeconfig --name online-shopping-cluster-1 --region us-east-1
       - name: Deploy application
         id: deploy
         run: |
